2010-06-22 mmichaud <michael.michaud@free.fr>
    Fix bug ID: 1775915 in GridRenderer. When grid option was on (with dashed
    lines), drawing dashed line could be very long at high zoom level.

2010-06-16 mmichaud <michael.michaud@free.fr>
    While readind a dbf character field, it now gets rid of trailing 0x00 bytes 

2010-06-06 sstein <sstein@geo.uzh.ch>
    added function to merge selected polygons with neighbor polygons - choosing either 
    the one with the largest area of all neighbors, or the polygon with the longest
    shared edge. (in Tools>Analysis>One Layer) The function is similar to 
    ArcGIS "eliminate".
    org.openjump.core.ui.plugin.tools.analysis.onelayer.MergeSelectedPolygonsWithNeighbourPlugIn

2010-06-04 beckerl <becker.larry@gmail.com>
	Changed Label Style so that vertical alignment works for polygons. Default is now Above.
    com.vividsolutions.jump.workbench.ui.renderer.style.LabelStyle.java
    
2010-05-27 sstein <sstein@geo.uzh.ch>
    added function to intersect polygons of one layer (in Tools>Analysis>One Layer)
    org.openjump.core.ui.plugin.tools.analysis.onelayer.IntersectPolygonsOneLayerPlugIn
    
2010-05-27 michaudm <michael.michaud@free.fr>
    fixed bug ID:3007431 (loading empty postgis tables)
    improved mixed-case schema/table/column name management
    
2010-04-26 sstein <sstein@geo.uzh.ch>
    fixed error in median calculation of
    org.openjump.core.attributeoperations.AttributeOp 
    
2010-04-10 michaudm <michael.michaud@free.fr>
    improved UnionByAttribute adding better warnings and output messages if
    invalid geometries are found (may slow down the whole process)

2010-04-07 michaudm <michael.michaud@free.fr>
    improved ExplodeSelectedFeatures performance avoiding to clone many
    coordinates uselessly (where many means, for each GeometryCollection, total
    number of coord x number of single geometries)

2010-04-03 michaudm <michael.michaud@free.fr>
    add InvertSelectionPlugIn