@@ -765,28 +765,28 @@ org.openjump.plugin.tools.IntersectPolygonLayersPlugIn.Found-more-than-one-sourc
 org.openjump.plugin.tools.IntersectPolygonLayersPlugIn.Transfer-attributes = Transferer les attributs
 org.openjump.plugin.tools.analysis.onelayer.IntersectPolygonsOneLayerPlugIn.Intersect-Polygons = Intersecter les polygones entre eux
 org.openjump.plugin.tools.analysis.onelayer.IntersectPolygonsOneLayerPlugIn.sDescription = Intersecte tous les polygones d'une couche. Les polygones r\u00E9sultant qui correspondent \u00E0 plusieurs polygones initiaux perdent leurs attributs. Note\: Voir aussi la commande graphe planaire qui propose une fonction similaire.
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.buffer-radius = taille de la zone tampon
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.count = nombre
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.buffer-radius = Taille de la zone tampon
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.count = Nombre
 org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.Join-Attributes-Spatially = Jointure spatiale avec agr\u00E9gation d'attribut...
 org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.join-result = resultat-jointure
 org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.Joins-attributes-of-source-layer-according-to-a-spatial-and-a-statistic-criterion = Agr\u00E8ge les attributs d'une couche source en fonction d'un crit\u00E8re spatial et d'une fonction statistique
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.majority = majorit\u00E9
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.maximum = maximum
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.mean = moyenne
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.median = m\u00E9dianne
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.minimum = minimum
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.minority = minorit\u00E9
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.majority = Majorit\u00E9
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.maximum = Maximum
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.mean = Moyenne
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.median = M\u00E9dianne
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.minimum = Minimum
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.minority = Minorit\u00E9
 org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.not-implemented = non impl\u00E9ment\u00E9
 org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.select-attribute = S\u00E9lectionner l'attribut
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.select-attribute-operation = s\u00E9lectionner une fonction statistique
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.select-spatial-operation = s\u00E9lectionner une fonction spatiale
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.source-features-contained-in-a-target-feature = l'objet source est contenu dans un objet cible
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.source-features-intersecting-a-target-feature = l'objet source intersecte un objet cible
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.source-layer = couche source
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.standard-dev = d\u00E9v. standard
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.sum = somme
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.target-feature-covered-by-source-features = l'objet cible est recouvert par des objets source
-org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.target-layer = couche cible
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.select-attribute-operation = S\u00E9lectionner une fonction statistique
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.select-spatial-operation = S\u00E9lectionner une fonction spatiale
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.source-features-contained-in-a-target-feature = L'objet source est contenu dans la cible
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.source-features-intersecting-a-target-feature = L'objet source intersecte la cible
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.source-layer = Couche source
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.standard-dev = D\u00E9v. standard
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.sum = Somme
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.target-feature-covered-by-source-features = L'objet cible est recouvert par la source
+org.openjump.core.ui.plugin.tools.JoinAttributesSpatiallyPlugIn.target-layer = Couche cible
 org.openjump.core.ui.plugin.tools.JoinWithArcPlugIn.and = et
 org.openjump.core.ui.plugin.tools.JoinWithArcPlugIn.Between = Entre
 org.openjump.core.ui.plugin.tools.JoinWithArcPlugIn.features-must-be-selected = des objets doivent \u00EAtre s\u00E9lectionn\u00E9s.
